--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server",
+    "dev": "dotenv -e .env.local node server",
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build --ssrManifest --outDir dist/client",
     "build:server": "vite build --ssr src/entry-server.js --outDir dist/server",
-    "serve": "cross-env NODE_ENV=production node server",
+    "serve": "dotenv -e .env cross-env NODE_ENV=production node server",
     "preview": "npm run build && npm run serve"
   },
   "dependencies": {
@@ -16,6 +16,8 @@
     "compression": "^1.7.4",
     "cross-env": "^7.0.2",
     "dotenv": "^10.0.0",
+    "dotenv-cli": "^4.1.1",
+    "element-plus": "^1.2.0-beta.5",
     "express": "^4.17.1",
     "mongodb": "^4.2.1",
     "morgan": "^1.10.0",
@@ -30,6 +32,7 @@
     "@vitejs/plugin-vue": "^1.2.1",
     "@vue/compiler-sfc": "^3.0.0-0",
     "unplugin-auto-import": "^0.5.1",
+    "unplugin-element-plus": "^0.1.3",
     "unplugin-vue-components": "^0.17.6",
     "vite": "^2.1.5"
   },
